# NoShot

./: NoShot-Run-LogOnly.bat  NoShot-Run-Report.bat  NoShot-Run.bat  NoShot.py  README.md  READ_ME.txt  setup.cfg
NoShotPy/: NoShot.py
NoShotScripts/: NoShot-Pub.py  NoShot_Discord_Pub.py
NoShotSetupScripts/: 2a-NoShot-UserSetup.bat
NoShotSetupScripts-START_HERE/: 1a-NoShot-AdminSetup.bat  2a-NoShot-UserSetup.bat
