[metadata]
name = noShotPy
version = 1.0.1
author = YMobyMurkU
author_email = ymobymurku.email@gmail.com
description = Eve Echoes Population Monitor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YMobyMurkU/Noshot
project_urls =
    Bug Tracker = https://github.com/YMobyMurkU/Noshot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    argparse
    requests
    tailer
    pytesseract
    Pillow
    PyQt5
    PyQt5-sip
    pytesseract


[options.packages.find]
where = src
